<resources>
    <string name="app_name" translatable="false">Create PC</string>
    <!-- Nav bottom bar buttons text -->
    <string name="menu_create">workshop</string>
    <string name="menu_search">search</string>
    <string name="menu_builds">builds</string>
    <!-- Tool bar buttons text -->
    <string name="theme_btn_text">Theme</string>
    <string name="ru_btn" translatable="false">Ru</string>
    <string name="en_btn" translatable="false">En</string>

    <!-- StartFragment button text -->
    <string name="create_build">Create PC configuration</string>

    <!-- Image description -->
    <string name="contentDescription_category_img">category image</string>
    <string name="contentDescription_back_img">back button</string>
    <!-- SearchFragment cards text -->
    <string name="cpu_category_name">Processors</string>
    <string name="gpu_category_name">Graphics cards</string>
    <string name="motherboard_category_name">Motherboards</string>
    <string name="psu_category_name">Power Supplies</string>
    <string name="ram_category_name">RAM</string>
    <string name="case_category_name">Cases</string>
    <string name="ssdM_category_name">SSD drives(M.2)</string>
    <string name="ssd2_category_name">SSD drives(2.5")</string>
    <string name="hdd_category_name">Hard drives</string>
    <string name="cpu_cooling_category_name">Processor Coolers</string>
    <string name="case_cooling_category_name">Case fans</string>

    <!-- Types of computer parts -->
    <string-array name="pc_part_type_names">
        <item>Processor </item>
        <item>Graphics card </item>
        <item>Motherboard </item>
        <item>Power Supply </item>
        <item>RAM </item>
        <item>Processor Cooler </item>
        <item>Case </item>
        <item>SSD drive(M.2) </item>
        <item>SSD drive(2.5") </item>
        <item>Hard drive </item>
        <item>Case fan </item>
    </string-array>

    <!-- Specifications of computer parts -->
    <string-array name="pc_part_spec_names">
        <item>Socket: </item>
        <item>Number of cores: </item>
        <item>Clock speed(MHz): </item>
        <item>Clock speed turbo(MHz): </item>
        <item>Heat dissipation(W): </item>
        <item>Memory capacity(GB): </item>
        <item>GPU clock speed(MHz): </item>
        <item>GPU clock speed boost(MHz): </item>
        <item>Recommended power supply(W): </item>
        <item>Dimensions (WxHxD mm): </item>
        <item>Socket: </item>
        <item>Chipset: </item>
        <item>Number of memory slots: </item>
        <item>Memory type: </item>
        <item>Form factor: </item>
        <item>Power(W): </item>
        <item>Standard: </item>
        <item>Fan size(mm): </item>
        <item>80 PLUS certification: </item>
        <item>Modular cables: </item>
        <item>Memory type: </item>
        <item>Memory capacity(GB): </item>
        <item>Number of modules in the set: </item>
        <item>Clock speed(MHz): </item>
        <item>Memory bandwidth(Mb/s): </item>
        <item>Socket: </item>
        <item>Maximum power dissipation(W): </item>
        <item>Cooler height(mm): </item>
        <item>Fan size(mm): </item>
        <item>Noise level(dB): </item>
        <item>Nominal size: </item>
        <item>Form factor: </item>
        <item>Maximum graphics card length: </item>
        <item>Maximum cooler height: </item>
        <item>Dimensions (WxHxD mm): </item>
        <item>Form factor: </item>
        <item>Drive capacity(GB): </item>
        <item>Interface: </item>
        <item>Read speed(MB/sec): </item>
        <item>Write speed(MB/sec): </item>
        <item>Form factor: </item>
        <item>Drive capacity(GB): </item>
        <item>Interface: </item>
        <item>Read speed(MB/sec): </item>
        <item>Write speed(MB/sec): </item>
        <item>Form factor: </item>
        <item>Hard drive capacity(GB): </item>
        <item>Interface: </item>
        <item>Buffer memory capacity(MB): </item>
        <item>Rotation speed(RPM): </item>
        <item>Fan size(mm): </item>
        <item>Rotation speed(RPM): </item>
        <item>Airflow(CFM): </item>
        <item>Noise level(dB): </item>
        <item>Illumination: </item>
    </string-array>

    <!-- Specifications of computer builds -->
    <string-array name="pc_build_spec_names">
        <item>Processor: </item>
        <item>Graphics card: </item>
        <item>Motherboard: </item>
        <item>RAM: </item>
        <item>Power Supply: </item>
    </string-array>

    <string name="empty_param" translatable="false">-</string>
    <string name="currency_icon" translatable="false">\u20bd</string>

    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_select">Select</string>

    <!-- Text in search page -->
    <string name="no_results">No results</string>
    <string name="search_hint">Component name</string>

    <!-- Text in builds page -->
    <string name="no_builds">No builds yet</string>

    <!-- Message if element already deleted -->
    <string name="deleted">Element is already empty</string>

    <!-- Delete element dialog fragment strings -->
    <string name="dialog_header">Are you sure you want to delete</string>
    <string name="dialog_warning">This action cannot be undone!</string>
    <string name="dialog_btn_cancel">No (Cancel)</string>
    <string name="dialog_btn_accept">Yes (Delete)</string>

    <!-- Save build dialog fragment strings -->
    <string name="dialog_save_btn_cancel">Cancel</string>
    <string name="dialog_save_btn_accept">Done</string>
    <string name="dialog_save_header">Name</string>
    <string name="dialog_save_hint">Enter a name here</string>

    <string name="build_name">Build</string>
</resources>