<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        style="@style/Widget.Material3.Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/button_toggle_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ru_btn"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.Icon"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ru_btn"
                android:textAllCaps="false"
                android:textSize="@dimen/buttonLarge"
                android:fontFamily="@font/roboto_medium" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/en_btn"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.Icon"
                android:paddingLeft="4dp"
                android:paddingRight="14dp"
                android:text="@string/en_btn"
                android:textAllCaps="false"
                android:textSize="@dimen/buttonLarge"
                android:fontFamily="@font/roboto_medium" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_theme"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:text="@string/theme_btn_text"
            android:textSize="@dimen/buttonLarge"
            android:fontFamily="@font/roboto_medium"
            android:textColor="?attr/colorOnBackground"
            app:track="@drawable/custom_track"
            android:thumb="@drawable/custom_thumb"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_bar"
        app:layout_constraintBottom_toTopOf="@+id/navigation_menu"

        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?android:attr/colorBackground"
        app:itemTextAppearanceActive="@style/NavTextStyle"
        app:itemTextAppearanceInactive="@style/NavTextStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>